packages/kyvernoPolicies/chart/tests/vpol/disallow-istio-injection-bypass-cel/kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-label-false
  labels:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-annotation-false
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-label-true
  labels:
    sidecar.istio.io/inject: "true"
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-annotation-true
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-istio-key
  labels:
    other: value
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-annotation-false
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: container01
        image: dummyimagename
